# rag_simple

./: .gitignore  README.md  format_and_todo.sh  pyproject.toml  test_and_lint.sh
src/rag_simple/: __init__.py  chatbot.py  cmd.py  document.py  embedding.py  kv_model.py  ollama_client.py  path_builder.py  project.py  prompt.py
src/rag_simple/flow_manager/: __init__.py  manager.py  path_builder.py
src/rag_simple/llm_agent/: __init__.py  base.py  llm.py  loader.py  ollama.py
src/rag_simple/repl/: __init__.py  repl.py  respond.py
src/rag_simple/vector_db/: __init__.py  base.py  chroma_db.py
tests/: __init__.py  test_kv_model.py
